Fix scrollbar background

--- a/mediarepo-ui/src/app/app.component-theme.scss
+++ b/mediarepo-ui/src/app/app.component-theme.scss
@@ -13,7 +13,7 @@
   ::ng-deep ::-webkit-scrollbar {
     width: 15px;
     height: 15px;
-    background: #303030;
+    background: #272727;
   }
 
   ::ng-deep ::-webkit-scrollbar-thumb {
